# simsemi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Formulc/: formulc.c
NUMERIC/: devclass.cpp  elcclass.cpp  eleclass.cpp  envclass.cpp  funclass.cpp  globfunc.cpp  infclass.cpp  matclass.cpp  modclass.cpp  nodclass.cpp  parclass.cpp  solclass.cpp  strtable.cpp  supclass.cpp  thrclass.cpp
NUMERIC/INCLUDE/: comincl.h  globfunc.h  simconst.h  simdev.h  simenv.h  simmat.h  simnode.h  simqw.h  strtable.h
cli/: main.cpp  wiofunc_cli.cpp
gui/: app.cpp  app.h  data_export.cpp  device_editor.cpp  dialogs.cpp  main_gui.cpp  menu.cpp  plots.cpp  wiofunc_gui.cpp
test/: dbr_ntype_1p5.dev  dbr_ntype_improved.dev  dbr_ptype_1p5.dev  dbr_ptype_improved.dev  gaas_photodetector.spc  mqw_solar_cell.dev  pn_junction.dev  test_harness.cpp  thesis_photodetector.dev  thesis_pn_diode.dev  thesis_resistor.dev  vcsel_improved.dev  vcsel_standard.dev
